[package]
name = "reedline-repl-rs"
version = "0.1.0"
authors = ["Artur Hallmann <arturh@arturh.de>", "Jack Lund <jackl@geekheads.net>"]
description = "Library to generate a REPL for your application based on reedline"
license = "MIT"
repository = "https://github.com/arturh85/reedline-repl-rs"
homepage = "https://github.com/arturh85/reedline-repl-rs"
readme = "README.md"
keywords = ["repl", "interpreter"]
categories = ["command-line-interface"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = "0.6.0"
regex = "1.5.6"
yansi = "0.5.1"
nu-ansi-term = { version = "0.45.1" }
crossterm = { version = "0.23.2" }

[dev-dependencies]
clap = "2.34.0"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"

[target.'cfg(unix)'.dependencies]
nix = "0.24.1"
