[package]
name = "reedline-repl-rs"
version = "0.2.1"
authors = ["Artur Hallmann <arturh@arturh.de>", "Jack Lund <jackl@geekheads.net>"]
description = "Library to generate a fancy REPL for your application based on reedline and clap"
license = "MIT"
repository = "https://github.com/arturh85/reedline-repl-rs"
homepage = "https://github.com/arturh85/reedline-repl-rs"
readme = "README.md"
keywords = ["repl", "interpreter", "clap"]
categories = ["command-line-interface"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = "0.6.0"
regex = "1"
clap = "3"
yansi = "0.5.1"
nu-ansi-term = { version = "0.45.1" }
crossterm = { version = "0.23.2" }

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"

[target.'cfg(unix)'.dependencies]
nix = "0.24.1"
